@@ -4,6 +4,7 @@ xxxx-xx-xx : Version next
  * Fix payload offset detection, a bug which broke packets that have
    adaptation with whole packet size (libtsfuncs).
  * Add --input-service option, to choose service id (program) in MPTS input.
+ * Parse SDT and display provider and service name.
 
 2011-11-18 : Version 4.0
  * Set CAMD sockets NODELAY to avoid OSCAM errors when many packets are sent.
